# syzygy

./: .gitignore  README.md
jsonapi/: Cargo.toml
jsonapi_derive/: Cargo.toml
syzygy/: Cargo.toml
syzygy/src/: core.rs  lib.rs  parts.rs  path.rs  router.rs  tree.rs  view.rs
syzygy/src/router/: path.rs
syzygy/src/router/tree/: collection.rs  view.rs
syzygy/src/tree/: collection.rs  view.rs
syzygy_derive/: Cargo.toml
syzygy_derive/src/: lib.rs
syzygy_example/: Cargo.toml
syzygy_example/src/: main.rs
