[package]
name = "syzygy_example"
version = "0.1.0"
authors = ["Noah Kim <noahbkim@gmail.com>"]
edition = "2018"

[dependencies]
syzygy = { path = "../syzygy" }
jsonapi = { path = "../jsonapi" }
jsonapi_derive = { path = "../jsonapi_derive" }
hyper = { version = "0.14.19", features = ["server", "runtime", "http1", "http2"] }
tokio = { version = "1.18.2", features = ["full"] }
async-std = { version = "1.11.0", features = ["attributes"] }
serde = { version = "1.0.137", features = ["derive"] }
futures-util = "0.3.21"
serde_json = "1.0.81"
async-trait = "0.1.53"
